# mailcow_integration

./: LICENSE  README.md  pyproject.toml  test_mailcow.py
mailcow_integration/: hooks.py  modules.txt  user_hooks.py
mailcow_integration/config/: mailcow_integration.py
mailcow_integration/doctype/mailcow_settings/: mailcow_settings.json
mailcow_integration/mailcow_integration/: __init__.py
mailcow_integration/mailcow_integration/doctype/: __init__.py
mailcow_integration/mailcow_integration/doctype/mailcow_settings/: mailcow_settings.json  mailcow_settings.py
